[package]
name = "windmill"
version = "0.1.0"
edition = "2018"
authors = ["JTPond <jtpond42@gmail.com>"]
readme = "README.md"
repository = "https://github.com/JTPond/windmill"
license = "MIT OR Apache-2.0"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.7.3"
monies = "0.0.4"
tokio = { version = "0.2", features = ["full"] }
warp = "0.2"
tokio-tungstenite = { version = "0.11", default-features = false, optional = true }
futures = { version = "0.3", default-features = false, features = ["alloc"] }
pretty_env_logger = "0.4"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
reqwest = { version="0.10.8", features = ["json"] }
