[package]
name = "windmill"
description = "WIP for doing Dutch style auctions in Rust"
version = "0.1.0"
edition = "2018"
authors = ["JTPond <jtpond42@gmail.com>"]
readme = "README.md"
repository = "https://github.com/JTPond/windmill"
license = "MIT OR Apache-2.0"
keywords = ["finance","auction"]
categories = ["finance"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.7.3"
rusty-money = { version = "0.4.0", features = ["iso"]}
chrono = { version = "0.4", features = ["serde"] }
# tokio = { version = "0.2", features = ["full"] }
# warp = "0.2"
# tokio-tungstenite = { version = "0.11", default-features = false, optional = true }
# futures = { version = "0.3", default-features = false, features = ["alloc"] }
# pretty_env_logger = "0.4"
# serde = "1.0"
# serde_derive = "1.0"
# serde_json = "1.0"
# reqwest = { version="0.10.8", features = ["json"] }

[badges]
maintenance = { status = "actively-developed" }
